...
  const TaskListScreen({super.key});

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: const Text('Мои задачи', 
          style: TextStyle(
            fontWeight: FontWeight.bold,
            fontSize: 24,
          )
        ),
        centerTitle: true,
...
          }
          return const Center(child: CircularProgressIndicator());
        },
      ),
      floatingActionButton: FloatingActionButton.extended(
        icon: const Icon(Icons.add, size: 28),
        label: const Text('Новая задача', 
          style: TextStyle(
            fontSize: 16,
            fontWeight: FontWeight.w500
          )),
        onPressed: () => Navigator.push(
          context,
...
